# Rust-Demo

./: README.md
bfs_dfs/: Cargo.toml
bfs_dfs/src/: main.rs
binary_search/: Cargo.toml
binary_search/src/: main.rs
binary_tree/src/: main.rs
books_api/: Cargo.toml
books_api/src/: main.rs  settings.rs
books_api/src/controller/: bookser.rs  mod.rs
books_api/src/models/: books.rs  mod.rs
books_api/src/resp/: mod.rs
fibonacci_seq/: Cargo.toml
fibonacci_seq/src/: main.rs
guess_number/: Cargo.toml
guess_number/src/: main.rs
manage_info/: Cargo.toml
manage_info/src/: main.rs  person_manage.rs
manage_info/src/person/: birth_date.rs  mod.rs  person_info.rs  sex.rs
manage_info/src/utils/: mod.rs
web_auto_test/: Cargo.toml
web_auto_test/src/: main.rs
web_crawler/: Cargo.toml
web_crawler/src/: main.rs
word_count/: Cargo.toml
word_count/src/: main.rs
