[package]
name = "books_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1"
poem-openapi = { version = "3", features = ["swagger-ui"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
